Fixed tab spacing issue

--- a/style.css
+++ b/style.css
@@ -39,17 +39,15 @@ ul{
     color: gray;
     text-align: center;
     margin: 0;
-    padding:25%;
     padding-top: 8px;
     padding-bottom: 8px;
     text-decoration: none;
     cursor:pointer;
     border: none;
-    display: inline-block;
     font-size: 1.5rem;
     transition: 0.3s;
-    
-
+    flex:1;
+    width:auto;
 }
 
 .menu_bar button:hover{
